src/test/error/left.c
int func() {

}
int main() {
    int a;
    a + 4 = 123;
    func() = 123;
    func = 123;
}
